--- a/app/styles/vars/_tools.sg-updates.scss
+++ b/app/styles/vars/_tools.sg-updates.scss
@@ -301,11 +301,11 @@ $space-quad:        $space*4;   // 64
 }
 
 .social-media-links {
-  .c-share-tools__group a:first-child {
-    padding-left: 0;
-    margin-left: 0;
+  .c-share-tools__link {
     width: 30px;
+    height: 30px;
   }
+
 }
 
 .wqxr-logo-icon, .c-share-tools__group {
